k8s/apps/vaultwarden/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-ui
  namespace: argocd
spec:
  parentRefs:
    - name: cloudflared
      namespace: gateway
  hostnames:
    - vault.schaermu.ch
  rules:
    - backendRefs:
        - name: vaultwarden
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
